# mip-solver

./: .gitignore  CMakeLists.txt  README.md  main.py
cmake/: FindCPLEX.cmake  FindGUROBI.cmake  FindXPRESS.cmake
ignore/: infeasible.txt  numerics.txt  open.txt
mipdownloader/: miplib2027-download.py
removing_numerics/: The Collection Set.csv  run.py
src/: main.cpp  solvers.cpp  solvers.h
